remove warnings